--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-MONGO_URL='mongodb+srv://shadesauols:<1EH9YM4bEH1eIfCJ>@cluster0.k64ym7k.mongodb.net/?retryWrites=true&w=majority'
+MONGO_URL='mongodb+srv://shadesauols:1EH9YM4bEH1eIfCJ@cluster0.k64ym7k.mongodb.net/?retryWrites=true&w=majority'
+JWT_SECRET="superhardstringtoguess"
 PORT=3001
